# agents

./: .env.txt  .gitignore  .pre-commit-config.yaml  logging.conf  pyproject.toml
agents/: __main__.py  aopic.py  oai.py
agents/tools/: github.py
